--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ img {
 
 .offer-section {
     text-align: center;
+    margin-bottom: 64px;
 }
 
 .content {
@@ -106,4 +107,19 @@ img {
     font-weight: extra-bold;
     font-size: 36px;
     color: #1F2937;
+}
+
+.mission-section {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+}
+
+.mission-statement-author {
+    font-style: none;
+    align-self: flex-end;
 }
