--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Roboto, sans-serif;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -61,6 +62,7 @@ img {
 .hero-content {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     padding: 8px 16px;
     gap: 16px;
     flex: auto;
@@ -90,6 +92,7 @@ img {
 .offer-section {
     text-align: center;
     margin-bottom: 64px;
+    padding: 100px;
 }
 
 .content {
